Z-index issue that hopefully won't screw us up elsewhere. [Fixes #72997564]

--- a/app/assets/stylesheets/modules-tables.css.scss
+++ b/app/assets/stylesheets/modules-tables.css.scss
@@ -89,6 +89,7 @@ table {
   border-collapse: collapse;
   font-size: 12px;
   &.js-fixed {
+    z-index: auto;
     min-width: 0;
   }
 }
